[match-writer][CHENG] Update MatchTeamWriterTest.java